--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/Logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app"
@@ -18,7 +18,7 @@
     <!-- Setting up a social media card -->
     <meta property="og:title" content="Little Lemon Restaurant"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:image" content="src/assets/logo.jpg"/>
+    <meta property="og:image" content="src/assets/Logo.svg"/>
     <meta property="og:url" content="https://littlelemon.nelify.app"/>
     <meta property="og:description" content="Web site created using create-react-app"/>
     <meta property="og:locale" content="en_us"/>
