feat: Bar chart added

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <meta property="og:description" content="Web site created using create-react-app"/>
     <meta property="og:locale" content="en_us"/>
     <meta property="og:name" content="Little Lemon Restaurant"/>
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/Logo.svg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Little Lemon Restaurant</title>
   </head>
