fix: reservation feedback status and footer address fixed

--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/Logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app"
-    />
     <meta name="author" content="Philip Oyelegbin" />
     <meta name="language" content="english" />
     <meta name="title" content="Little Lemon Restaurant" />
-    <meta name="description" content="Web site created using create-react-app"/>
+    <meta name="description" content="Little Lemon is a family-owned Mediterranean restaurant, focused on traditional recipes served with a modern twist. The chefs draw inspiration from Italian, Greek, and Turkish culture and have a menu of 12–15 items that they rotate seasonally."/>
     <meta name="robots" content="index, follow" />
     <meta name="rating" content="safe for kids" />
     <meta name="revised" content="Saturday, March 26th, 2023" />
@@ -19,8 +17,8 @@
     <meta property="og:title" content="Little Lemon Restaurant"/>
     <meta property="og:type" content="website"/>
     <meta property="og:image" content="src/assets/Logo.svg"/>
-    <meta property="og:url" content="https://littlelemon.nelify.app"/>
-    <meta property="og:description" content="Web site created using create-react-app"/>
+    <meta property="og:url" content="https://mylittlelemon.vercel.app"/>
+    <meta property="og:description" content="Little Lemon is a family-owned Mediterranean restaurant, focused on traditional recipes served with a modern twist. The chefs draw inspiration from Italian, Greek, and Turkish culture and have a menu of 12–15 items that they rotate seasonally."/>
     <meta property="og:locale" content="en_us"/>
     <meta property="og:name" content="Little Lemon Restaurant"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/Logo.svg" />
