fix: social media card image fixed

--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,12 @@
     <!-- Setting up a social media card -->
     <meta property="og:title" content="Little Lemon Restaurant"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:image" content="src/assets/Logo.svg"/>
+    <meta property="og:image" content="https://mylittlelemon.vercel.app/static/media/Logo.6c132dfefa69396bba43f72aa595e62f.svg"/>
     <meta property="og:url" content="https://mylittlelemon.vercel.app"/>
     <meta property="og:description" content="Little Lemon is a family-owned Mediterranean restaurant, focused on traditional recipes served with a modern twist. The chefs draw inspiration from Italian, Greek, and Turkish culture and have a menu of 12–15 items that they rotate seasonally."/>
     <meta property="og:locale" content="en_us"/>
     <meta property="og:name" content="Little Lemon Restaurant"/>
+    <meta name="twitter:card" contents="summary_large_image"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/Logo.svg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Little Lemon Restaurant</title>
